new graph statistics with problems in footer

--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -180,6 +180,24 @@
     </div>
   </div>
 
+
+  <!-- THIS GRAPH MODIFIES THE FOOTER
+  <div class="row">
+    <div class="col-md-12">
+        <div class="metric-card">
+            <h4 class="metric-header">Total Ruleset = 110</h4>
+            <div class="chart-container">
+                <canvas id="rulesChart"></canvas>
+            </div>
+            <h4 class="metric-header">Total Ruleset: 117</h4>
+            <br>
+                <li> Vendor, Custom & Third Party Rules source (Syscalls)</li>
+                <li> Kubernetes Audit Logs source (Kubernetes Audit Events)</li>
+        </div>
+    </div>
+  </div>-->
+
+
   <h2 class="text-center my-4">New Rules</h2>
 
   <div class="row justify-content-center">
