URL improvement in workshop

--- a/about.html
+++ b/about.html
@@ -98,8 +98,9 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -129,6 +130,7 @@ footer {
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
               <li><a class="dropdown-item" href="security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="security/workshop.html">Workshop</a></li>
               <li><a class="dropdown-item" href="security/bypasses.html">Bypasses</a></li>
               <li><a class="dropdown-item" href="security/challenges.html">Challenges</a></li>
             </ul>
