--- a/info/what-is-falco.html
+++ b/info/what-is-falco.html
@@ -95,7 +95,7 @@
         <!-- About Link -->
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="../about.html">About</a>
           </li>
         </ul>
       </div>
