--- a/metrics/maturity.html
+++ b/metrics/maturity.html
@@ -126,6 +126,32 @@
   <!-- Dashboard Content -->
   <div class="container mt-5">
     <h1 class="text-center">Falco Maturity Dashboard</h1>
+
+      <!-- Content Section -->
+  <div class="container mt-5">
+    <h1 align="center">Challenges</h1>
+    <p>Falco challenges refer to the obstacles, limitations, and areas for enhancement associated with the security and implementation of the solution.</p>
+  </div>
+
+    <!-- Under Construction Section -->
+    <!-- <div class="container under-construction">
+      <img src="../assets/png-clipart-under-construction-under-construction-thumbnail.png" alt="Banner" style="max-width: 300px; width: 100%; height: auto; margin: 20px auto;>
+      <h1>⚠️ Under Construction</h1>
+      <p>We are working hard to bring you the best experience. Stay tuned for updates!</p>
+    </div> -->
+
+    <!-- Under Construction Section -->
+<div class="container under-construction text-center">
+  <h1>⚠️ Under Construction</h1>
+  <p>We are working hard to bring you the best experience. Stay tuned for updates!</p>
+  <img 
+    src="../assets/wip.jpg" 
+    alt="Banner" 
+    style="max-width: 350px; width: 150%; height: auto; margin: 20px auto;"
+  >
+  <!-- <h1>⚠️ Under Construction</h1>
+  <p>We are working hard to bring you the best experience. Stay tuned for updates!</p> -->
+</div>
     <div class="row mt-4">
       <div class="col-md-6">
         <div class="metric-card bg-light">
