--- a/security/workshop.html
+++ b/security/workshop.html
@@ -142,32 +142,41 @@ footer {
     <p>Enhance your security skills by exploring Falco's detection capabilities and best practices.</p>
   </section>
 
-  <!-- Security Scenarios Section -->
-  <div class="container my-5">
-    <h2 class="text-center mb-4">Security Scenarios detected by Falco</h2>
-    <div class="row">
-      <div class="col-md-4 scenario">
-        <img src="../assets/malware.webp" alt="Scenario 1">
-        <!-- <h4>Rootkit infection detection</h4> -->
-        <h4><a href="https://example.com/rootkit-detection" target="_blank" style="text-decoration: none; color: inherit;">Rootkit infection detection</a></h4>
-        <h3>2024</h3>
-        <p>Detects when sensitive files are accessed outside normal operations.</p>
+<!-- Security Scenarios Section -->
+<div class="container my-5">
+  <h2 class="text-center mb-4">Security Scenarios detected by Falco</h2>
+  <div class="row">
+    <div class="col-md-4 scenario">
+      <img src="../assets/malware.webp" alt="Scenario 1">
+      <h4><a href="https://example.com/rootkit-detection" target="_blank" style="text-decoration: underline; color: blue;">Rootkit infection detection</a></h4>
+      <h3>2024</h3>
+      <p>Detects when sensitive files are accessed outside normal operations.</p>
+    </div>
+    <div class="col-md-4 scenario">
+      <img src="../assets/privilegeEscalation.webp" alt="Scenario 2">
+      <h4><a href="https://example.com/privilege-escalation" target="_blank" style="text-decoration: underline; color: blue;">Privilege Escalation on hunting activities</a></h4>
+      <h3>2024</h3>
+      <p>Identifies attempts to break out of the container environment.</p>
+    </div>
+    <div class="col-md-4 scenario">
+      <img src="../assets/supplyChain.webp" alt="Scenario 3">
+      <h4><a href="https://example.com/supply-chain-detection" target="_blank" style="text-decoration: underline; color: blue;">Supply Chain detection</a></h4>
+      <h3>2025</h3>
+      <div class="container under-construction text-center">
+        <h1>⚠️ Under Construction</h1>
+        <p>We are working hard to bring you the best experience. Stay tuned for updates!</p>
+        <!-- <img 
+          src="../assets/wip.jpg" 
+          alt="Banner" 
+          style="max-width: 350px; width: 150%; height: auto; margin: 20px auto;"
+        > -->
+        <!-- <h1>⚠️ Under Construction</h1>
+        <p>We are working hard to bring you the best experience. Stay tuned for updates!</p> -->
       </div>
-      <div class="col-md-4 scenario">
-        <img src="../assets/privilegeEscalation.webp" alt="Scenario 2">
-        <!-- <h4>Privilege Escalation on hunting activities</h4> -->
-        <h4><a href="https://example.com/privilege-escalation" target="_blank" style="text-decoration: none; color: inherit;">Privilege Escalation on hunting activities</a></h4>
-        <h3>2024</h3>
-        <p>Identifies attempts to break out of the container environment.</p>
-      </div>
-      <div class="col-md-4 scenario">
-        <img src="../assets/supplyChain.webp" alt="Scenario 3">
-        <h4>Suply Chain detection</h4>
-        <h3>2025</h3>
-        <p>Monitors and flags attempts to gain unauthorized administrative access.</p>
-      </div>
+      <p>Monitors and flags attempts to gain unauthorized administrative access.</p>
     </div>
   </div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
