Other statistics improvemenets

--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -326,13 +326,42 @@
 
   <div class="col-md-3">
       <div class="metric-card">
-          <h4 class="metric-header">Clusters with latest rules
+          <h4 class="metric-header">CVE Detection Rules
           </h4>
-          <p class="metric-value">n</p>
+          <p class="metric-value">11</p>
       </div>
   </div>
+  <div class="col-md-3">
+    <div class="metric-card">
+        <h4 class="metric-header">CVE Detection Rules
+        </h4>
+        <p class="metric-value">11</p>
+    </div>
 </div>
 
+<div class="row justify-content-center"></div>
+  <div class="col-md-3">
+      <div class="metric-card">
+          <h4 class="metric-header">Last package rules number</h4>
+          <p class="metric-value">117</p>
+      </div>
+  </div>
+
+  <div class="col-md-3">
+      <div class="metric-card">
+          <h4 class="metric-header">CVE Detection Rules
+          </h4>
+          <p class="metric-value">11</p>
+      </div>
+  </div>
+  <div class="col-md-3">
+    <div class="metric-card">
+        <h4 class="metric-header">CVE Detection Rules
+        </h4>
+        <p class="metric-value">11</p>
+    </div>
+</div>
+</div>
 
   <!-- Footer -->
 <footer>
