new rules 40 to 43

--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -2082,6 +2082,225 @@ This rule helps detect privilege escalation attempts within containerized enviro
     </div>
 </div>
 
+<!-- Rule 40 -->
+<div class="rule">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 40">
+    <div class="rule-content">
+        <div class="rule-summary" onclick="toggleDetail('rule40')">
+            Rule 40: Suspicious modprobe file event [custom]
+            <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                <span class="tooltip">Haz clic para desplegar más información</span>
+            </span>
+        </div>
+        <div class="rule-detail" id="rule40">
+            <div class="sub-section" onclick="toggleSubDetail('desc40')">
+                Description 
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="desc40">
+                Under construction.
+            </div>
+
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia40')">
+                Relevance
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="pertinencia40">
+                Under construction.
+            </div>
+
+            <div class="sub-section">
+                <strong>Environment:</strong> Incubation
+            </div>
+            <div class="sub-section">
+                <strong>Rule status:</strong>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        50%
+                    </div>
+                </div>
+            </div>
+            <div class="sub-section">
+                <strong>Tags:</strong>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Rule 41 -->
+<div class="rule">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 41">
+    <div class="rule-content">
+        <div class="rule-summary" onclick="toggleDetail('rule41')">
+            Rule 41: Enumeration of Kernel Modules [custom]
+            <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                <span class="tooltip">Haz clic para desplegar más información</span>
+            </span>
+        </div>
+        <div class="rule-detail" id="rule41">
+            <div class="sub-section" onclick="toggleSubDetail('desc41')">
+                Description 
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="desc41">
+                Under construction.
+            </div>
+
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia41')">
+                Relevance
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="pertinencia41">
+                Under construction.
+            </div>
+
+            <div class="sub-section">
+                <strong>Environment:</strong> Incubation
+            </div>
+            <div class="sub-section">
+                <strong>Rule status:</strong>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        50%
+                    </div>
+                </div>
+            </div>
+            <div class="sub-section">
+                <strong>Tags:</strong>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Rule 42 -->
+<div class="rule">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 42">
+    <div class="rule-content">
+        <div class="rule-summary" onclick="toggleDetail('rule42')">
+            Rule 42: Sudoers File modification [custom]
+            <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                <span class="tooltip">Haz clic para desplegar más información</span>
+            </span>
+        </div>
+        <div class="rule-detail" id="rule42">
+            <div class="sub-section" onclick="toggleSubDetail('desc42')">
+                Description 
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="desc42">
+                Under construction.
+            </div>
+
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia42')">
+                Relevance
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="pertinencia42">
+                Under construction.
+            </div>
+
+            <div class="sub-section">
+                <strong>Environment:</strong> Incubation
+            </div>
+            <div class="sub-section">
+                <strong>Rule status:</strong>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        50%
+                    </div>
+                </div>
+            </div>
+            <div class="sub-section">
+                <strong>Tags:</strong>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Rule 43-->
+<div class="rule">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 43">
+    <div class="rule-content">
+        <div class="rule-summary" onclick="toggleDetail('rule43')">
+            Rule 43: Potential Code Execution via Postgresql [custom]
+            <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                <span class="tooltip">Haz clic para desplegar más información</span>
+            </span>
+        </div>
+        <div class="rule-detail" id="rule43">
+            <div class="sub-section" onclick="toggleSubDetail('desc43')">
+                Description 
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="desc43">
+                Under construction.
+            </div>
+
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia43')">
+                Relevance
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="pertinencia43">
+                Under construction.
+            </div>
+
+            <div class="sub-section">
+                <strong>Environment:</strong> Incubation
+            </div>
+            <div class="sub-section">
+                <strong>Rule status:</strong>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        50%
+                    </div>
+                </div>
+            </div>
+            <div class="sub-section">
+                <strong>Tags:</strong>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
