Linux capabilities and pseudoterminals

--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -2030,10 +2030,10 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 39 -->
 <div class="rule">
-    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 39">
+    <img src="../assets/pseudoterminals.webp" alt="Imagen de Regla 39">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule39')">
-            Rule 39: Interactive Terminal Spawned via python [custom]
+            Rule 39: Attempt to Upgrade a Simple Shell to a Fully Interactive TTY [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
@@ -2046,7 +2046,9 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="desc39">
-                Under construction.
+                Detects an attempt to upgrade a simple shell to a fully interactive TTY. This technique can be dangerous as it allows attackers to bypass security restrictions,
+   access sensitive environment variables, and escalate privileges. A fully interactive shell provides greater control, enabling attackers to execute commands without
+   limitations, maintain persistent access, or exploit system binaries.
             </div>
 
             <div class="sub-section" onclick="toggleSubDetail('pertinencia39')">
@@ -2056,6 +2058,62 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="pertinencia39">
+                This Falco rule detects attempts to upgrade a simple shell to a fully interactive TTY, a common technique used by attackers to bypass restrictions, gain persistence, and escalate privileges. In Kubernetes environments, preventing such upgrades is crucial to maintaining container isolation and reducing the risk of unauthorized access or lateral movement.
+            </div>
+
+            <div class="sub-section">
+                <strong>Environment:</strong> Incubation
+            </div>
+            <div class="sub-section">
+                <strong>Rule status:</strong>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                        90%
+                    </div>
+                </div>
+            </div>
+            <div class="sub-section">
+                <strong>Tags:</strong>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+                <span class="badge me-2" style="background-color: #fd1414; color: white;">T1059</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Rule 39-4 -->
+<div class="rule">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 39-4">
+    <div class="rule-content">
+        <div class="rule-summary" onclick="toggleDetail('rule39-4')">
+            Rule 39-4: Interactive Terminal Spawned via python [custom]
+            <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                <span class="tooltip">Haz clic para desplegar más información</span>
+            </span>
+        </div>
+        <div class="rule-detail" id="rule39-4">
+            <div class="sub-section" onclick="toggleSubDetail('desc39-4')">
+                Description 
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="desc39-4">
+                Under construction.
+            </div>
+
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia39-4')">
+                Relevance
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="pertinencia39-4">
                 Under construction.
             </div>
 
@@ -2077,10 +2135,13 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 <span class="badge bg-secondary">container</span>
                 <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
                 <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+                <span class="badge me-2" style="background-color: #fd1414; color: white;">Txxxx</span>
+                <span class="badge me-2" style="background-color: #fd1414; color: white;">T1059-commandexecution</span>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Rule 40 -->
 <div class="rule">
@@ -2687,7 +2748,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 51-->
 <div class="rule">
-    <img src="no hay" alt="Imagen de Regla 51">
+    <img src="../assets/LinuxCapabilities.jpeg" alt="Imagen de Regla 51">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule51')">
             Rule 51: Linux Capabilties enumeration [custom]
@@ -2703,7 +2764,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="desc51">
-                Under construction.
+                Identifies recursive or system-wide enumeration of process capabilities using tools like capsh --print, getcap -r /, getpcaps, pscap, or filecap. Attackers may exploit discovered capabilities to escalate privileges.
             </div>
 
             <div class="sub-section" onclick="toggleSubDetail('pertinencia51')">
@@ -2713,7 +2774,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="pertinencia51">
-                Under construction.
+                Helps detect recursive process capability enumeration, a technique that attackers can use to identify and exploit elevated privileges within containers. By monitoring tools like getcap, it mitigates the risk of privilege escalation, preventing attackers from gaining unauthorized root access and compromising the security of the containerized infrastructure.
             </div>
 
             <div class="sub-section">
@@ -2723,8 +2784,8 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 <strong>Rule status:</strong>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
-                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 51%;">
-                        51%
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                        90%
                     </div>
                 </div>
             </div>
@@ -2732,8 +2793,9 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 <strong>Tags:</strong>
                 <span class="badge bg-secondary me-2">host</span>
                 <span class="badge bg-secondary">container</span>
-                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
-                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">process</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_discovery</span>
+                <span class="badge me-2" style="background-color: #fd1414; color: white;">T1057</span>
             </div>
         </div>
     </div>
