custom rules improvements

--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -2086,35 +2086,35 @@ This rule helps detect privilege escalation attempts within containerized enviro
 </div>
 
 
-<!-- Rule 39-4 -->
+<!-- Rule 39-6 -->
 <div class="rule">
-    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 39-4">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 39-6">
     <div class="rule-content">
-        <div class="rule-summary" onclick="toggleDetail('rule39-4')">
-            Rule 39-4: Interactive Terminal Spawned via python [custom]
+        <div class="rule-summary" onclick="toggleDetail('rule39-6')">
+            Rule 39-6: Interactive Terminal Spawned via python [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
         </div>
-        <div class="rule-detail" id="rule39-4">
-            <div class="sub-section" onclick="toggleSubDetail('desc39-4')">
+        <div class="rule-detail" id="rule39-6">
+            <div class="sub-section" onclick="toggleSubDetail('desc39-6')">
                 Description 
                 <span class="info-icon" onclick="event.stopPropagation()">ℹ
                     <span class="tooltip">Haz clic para desplegar más información</span>
                 </span>
             </div>
-            <div class="sub-detail" id="desc39-4">
+            <div class="sub-detail" id="desc39-6">
                 Under construction.
             </div>
 
-            <div class="sub-section" onclick="toggleSubDetail('pertinencia39-4')">
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia39-6')">
                 Relevance
                 <span class="info-icon" onclick="event.stopPropagation()">ℹ
                     <span class="tooltip">Haz clic para desplegar más información</span>
                 </span>
             </div>
-            <div class="sub-detail" id="pertinencia39-4">
-                Under construction.
+            <div class="sub-detail" id="pertinencia39-6">
+                Monitoring for interactive Python terminals is essential for mitigating security risks in Kubernetes environments. Adversaries may exploit these terminals to execute malicious commands, leveraging Python's extensive capabilities to interact with system resources. Detecting such activity is vital for preventing unauthorized access and potential data breaches within containerized applications.
             </div>
 
             <div class="sub-section">
@@ -2758,7 +2758,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
         </div>
         <div class="rule-detail" id="rule51">
             <div class="sub-section" onclick="toggleSubDetail('desc51')">
-                Description 
+                 <b>Description</b>
                 <span class="info-icon" onclick="event.stopPropagation()">ℹ
                     <span class="tooltip">Haz clic para desplegar más información</span>
                 </span>
@@ -2768,7 +2768,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
             </div>
 
             <div class="sub-section" onclick="toggleSubDetail('pertinencia51')">
-                Relevance
+                 <b>Relevance</b>
                 <span class="info-icon" onclick="event.stopPropagation()">ℹ
                     <span class="tooltip">Haz clic para desplegar más información</span>
                 </span>
