metrics/security-coverage-technique.html

--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -1393,7 +1393,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="desc27">
-                Detects attempts to access or modify sensitive files within a container, potentially leading to security breaches.
+                Detects unsanctioned attempts to search for private keys or passwords within a container by utilizing common commands such as find, grep, and other recognized binaries.
             </div>
 
             <div class="sub-section" onclick="toggleSubDetail('pertinencia27')">
